infrastructure/chartmuseum/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartmuseum
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: "charts.ORGANIZATION.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chartmuseum
            port:
              number: 8080
  tls:
  - hosts:
    - charts.ORGANIZATION.com
    secretName: chartmuseum-ORGANIZATION-tls
